modif frontend + debut architecture hexagonal pour le backend

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -6,7 +6,8 @@
     },
     "recherche": {
         "barre": "Search",
-        "boutton": "Search"
+        "copier": "Copy",
+        "exporter": "Export"
     },
     "grille-resultat": {
         "prenom": "First name",
